welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:1: error: not found: value setColorBrosse
def marquerSol() {setColorBrosse(gray);baisseBrosse();leveBrosse()}
                  ^PictureMono1:1: error: not found: value gray
def marquerSol() {setColorBrosse(gray);baisseBrosse();leveBrosse()}
                                 ^